# filename-manager

./: .gitignore  .pre-commit-config.yaml  README.md  README_DEV.md  filename_manager.py  pyproject.toml  pytest.ini  test_filename_manager.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: clean.py
src/filename_manager/: __init__.py  filename_manager.py
tests/: _test_dir.py  conftest.py  file_extensions.py  nums.py  test_filename_manager.py
